# ntpostag

./: CMakeLists.txt  Makefile  NTPosTag.sln  README.md
ntpostag/: NTPosTag.vcxproj  NTPosTag.vcxproj.filters  bpython.cpp  character.cpp  conjugate.cpp  main.cpp  makedic.cpp  packages.config  paragraph.cpp  posdic.h  postag.h  restapi.cpp  sentence.cpp  stdafx.cpp  stdafx.h  token.cpp  util.cpp  util.h  worddic.cpp
tests/: test_anon_predicate.cpp  test_conjugate.cpp  test_main.cpp  test_pos.cpp  test_split_sentence.cpp  test_syllable.cpp
